--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
     }
